# riscv-rs

./: .gitignore  AGENT.md  Cargo.toml  README.md
digital-base/: Cargo.toml
docs/: README.md  soc-architecture.md
docs/rhdl/: README.md  circuits.md  components.md  concepts.md  faq.md  kernels.md  quickstart.md  simulation.md  use-cases.md  verilog.md
riscv-core/: Cargo.toml
riscv-core/src/: gpio.rs  lib.rs  main.rs  memory.rs  soc.rs  step.rs
riscv-core/src/units/: alu.rs  branch.rs  decoder.rs  fence.rs  immediate.rs  jump.rs  load.rs  mod.rs  op_imm.rs  op_reg.rs  reg_file.rs  reg_read.rs  register.rs  store.rs  upper.rs
riscv-core/tests/: gpio_verilator.rs
riscv-core/verilator/bram_soc/: sim_main.cpp
riscv-core/verilator/control_flow/: control_flow.c  linker.ld  sim_main.cpp
riscv-core/verilator/gpio/: gpio.c  sim_main.cpp
